--- a/vue_trip/index.html
+++ b/vue_trip/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+
+    <!-- 高德地图 -->
+    <script type="text/javascript">
+        window._AMapSecurityConfig = {
+            securityJsCode: "c399207905b07565e502e8baa42d6de4",
+        }
+    </script>
+    <script src="https://webapi.amap.com/loader.js"></script>
+    <script type="text/javascript">
+        AMapLoader.load({
+            key: "c399207905b07565e502e8baa42d6de4",       // 申请好的Web端开发者Key，首次调用 load 时必填
+            version: "2.0",                 // 指定要加载的 JSAPI 的版本，缺省时默认为 1.4.15
+        }).then((AMap) => {
+            const map = new AMap.Map('container', {
+                viewMode: '2D',  // 默认使用 2D 模式
+                zoom: 1,  //初始化地图层级
+                center: [116.397428, 39.90923]  //初始化地图中心点
+            });
+        })  
+    </script>
+
+
+</body>
+
 </html>
